# dotfiles

./: .gitignore  README.md
eww/: eww.scss  eww.yuck  eww.yuck.template
hypr/: hyprland.conf  hyprland.lua  hyprlock.conf  perdevice.conf
kitty/: kitty.conf
nvim/: init.lua  lazy-lock.json
quickshell/: AppSelectorWidget.qml  Corner.qml  MiscStatsWidget.qml  MusicWidget.qml  NetworkStatsWidget.qml  PowerMenuWidget.qml  ProfileWidget.qml  QuoteWidget.qml  ScreenCaptureWidget.qml  ServicesWidget.qml  SystemStatsWidget.qml  TailscaleWidget.qml  Volume.qml  WallpaperSelectorWidget.qml  WeatherWidget.qml  Workspaces.qml  old.qml  quotes.txt  shell.qml
scripts/: bar_toggle.sh  cpu-governor-toggle.sh  gpu-profile-toggle.sh  hyprland_capture_full.sh  hyprland_mon_socket.sh  hyprland_record_full.sh  (+4 more)
scripts/wallpaper/bins/spinning_globe/: Cargo.toml  gen_continents.py  generate_regions.py
scripts/wallpaper/bins/spinning_globe/assets/regions/: afghanistan.ron  albania.ron  algeria.ron  angola.ron  antarctica.ron  antarctica_2.ron  antarctica_3.ron  argentina.ron  armenia.ron  australia.ron  australia_2.ron  austria.ron  azerbaijan.ron  bangladesh.ron  belarus.ron  belgium.ron  belize.ron  benin.ron  bhutan.ron  bolivia.ron  botswana.ron  brazil.ron  brunei.ron  bulgaria.ron  burkina_faso.ron  burundi.ron  cambodia.ron  cameroon.ron  canada.ron  canada_10.ron  canada_11.ron  canada_12.ron  canada_13.ron  canada_14.ron  canada_15.ron  canada_2.ron  canada_3.ron  canada_4.ron  canada_5.ron  canada_6.ron  (+150 more)
scripts/wallpaper/bins/spinning_globe/src/: continents.rs  main.rs
(+42 files in other folders)
